src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Product_Line_2__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Formations</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Legal Forms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Text__c</fullName>
        <label>Product Line Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line (Obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Formations</fullName>
                </value>
                <value>
                    <fullName>Legal Forms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Overview_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Overview Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Attorney Consultation Requests</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Advantage Pro Standalone</fullName>
                </value>
                <value>
                    <fullName>Consultation Subscription</fullName>
                </value>
                <value>
                    <fullName>Consultation Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>Forms Subscription</fullName>
                </value>
                <value>
                    <fullName>Forms Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>Legal Advantage Plus Standalone</fullName>
                </value>
                <value>
                    <fullName>Legal Form</fullName>
                </value>
                <value>
                    <fullName>OCAA Plans</fullName>
                </value>
                <value>
                    <fullName>501(c)3 Preparation</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Annual Reports</fullName>
                </value>
                <value>
                    <fullName>Bylaws &amp; Resolutions</fullName>
                </value>
                <value>
                    <fullName>Certificate of Good Standing</fullName>
                </value>
                <value>
                    <fullName>Certified Copies</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar Renewal</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Corporate Dissolution</fullName>
                </value>
                <value>
                    <fullName>Corporate Minutes</fullName>
                </value>
                <value>
                    <fullName>EIN Obtainment</fullName>
                </value>
                <value>
                    <fullName>Entity Name Availability Check</fullName>
                </value>
                <value>
                    <fullName>Entity Name Reservation</fullName>
                </value>
                <value>
                    <fullName>Foreign Qualification</fullName>
                </value>
                <value>
                    <fullName>General Partnership Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Lock_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Lock Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questionnaire_End_Time__c</fullName>
        <label>Questionnaire Latest Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Initial_Page__c</fullName>
        <label>Questionnaire Initial Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Last_Page__c</fullName>
        <label>Questionnaire Last Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Lead_Milestone__c</fullName>
        <label>Questionnaire: Lead Milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Percent_Complete__c</fullName>
        <label>Questionnaire Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Start_Time__c</fullName>
        <label>Questionnaire Initial Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Time_Spent__c</fullName>
        <formula>(Questionnaire_End_Time__c - Questionnaire_Start_Time__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Questionnaire Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Date_Time__c</fullName>
        <description>The date time the customer asked to talk to our agent</description>
        <label>Review Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Phone__c</fullName>
        <description>The phone number the customer provided for our agent to call</description>
        <label>Review Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Round_Robin_AS__c</fullName>
        <formula>MOD(VALUE( Lead_Number_AS__c),5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin AS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_BIZ__c</fullName>
        <formula>MOD(VALUE( Lead_Number_BIZ__c),7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin BIZ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Response_Calc__c</fullName>
        <formula>( First_Response__c -  CreatedDate ) *1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Response_Time_Minutes__c</fullName>
        <formula>If(ISBLANK( LeadOwnerChanged__c), (First_Response__c -  CreatedDate ) *1440, (First_Response__c - LeadOwnerChanged__c) *1440)</formula>
        <label>SLA Response Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Response_Time__c</fullName>
        <label>SLA Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNE_Date__c</fullName>
        <label>SNE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Business_Hours__c</fullName>
        <formula>IF( 
ISBLANK(Start_of_Business_Sales__c ), null, 

IF( 
ISBLANK(End_of_Business_Sales__c ), null, 

If(AND(Date_Time_Created__c &gt; Start_of_Business_Sales__c , Date_Time_Created__c&lt;  End_of_Business_Sales__c ) , &apos;On Peak&apos;, &apos;Off Peak&apos;)))</formula>
        <label>Sales Business Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_opportunity_latest_campaign__c</fullName>
        <label>Sales opportunity latest campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sam_s_Club_ID__c</fullName>
        <label>Sam&apos;s Club ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Age__c</fullName>
        <formula>TEXT( CEILING(LastModifiedDate- Latest_Source_Activity__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_of_Business_Sales__c</fullName>
        <label>Start of Business</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_of_Formation__c</fullName>
        <label>State of Formation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talking_with_Attorney__c</fullName>
        <label>Talking with Attorney</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Consultation__c</fullName>
        <label>Tax Consultation-CTN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tealium_Id__c</fullName>
        <description>Tealium Id</description>
        <externalId>true</externalId>
        <label>Tealium Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tealium_Updates__c</fullName>
        <label>Tealium Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Eastern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <description>This field will record the date the lead status changes from Open to anything else plus the office start time which is 6:00am central.</description>
        <label>Today</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <formula>Total_Phone_Contacts__c +  Total_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Emails__c</fullName>
        <formula>Lead_Case__r.Number_Inbound_Emails__c +  Lead_Case__r.Total_outbound_emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Phone_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Phone Contacts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Source_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Source Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnaround_Time__c</fullName>
        <label>Turnaround Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7-10 business days</fullName>
                </value>
                <value>
                    <fullName>20-35 business days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Of_Business__c</fullName>
        <label>Type Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodations</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food Service</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Rental &amp; Leasing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_By_Tealium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated By Tealium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>User Order ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_Pricing_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viewed Pricing Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Design__c</fullName>
        <label>Web Design-Web.com</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_End_Time__c</fullName>
        <label>Website Latest Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Website_Page_Name__c</fullName>
        <label>Website Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Start_Time__c</fullName>
        <label>Website Initial Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Website_Time_Spent__c</fullName>
        <formula>(Website_End_Time__c - Website_Start_Time__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_Accomplish__c</fullName>
        <label>What Accomplish</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X15_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>15% Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leadcap__Facebook_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>Facebook Lead ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_Mobile_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Team__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Date_Time_Modified__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>State_of_Formation__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Date_Time_Created__c</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012G0000000qHQQ,012G0000000qHQR</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>VM - Final Attempt,Unqualified,Transaction Complete</value>
        </filters>
        <label>All Active Mobile Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Corporate</role>
            <role>Outbound_Lead</role>
            <role>Outbound_Management</role>
            <role>Sales_Director</role>
            <role>Sales_Reporting_Analyst</role>
            <role>VPSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Development_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012G0000000qHGp</value>
        </filters>
        <label>Business Development Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Business_Development_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Services</fullName>
        <columns>Business_Service__c</columns>
        <columns>Business_Name_or_Entity__c</columns>
        <columns>Primary_Business_Activity__c</columns>
        <columns>State_of_Formation__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Date_Time_Modified__c</columns>
        <columns>Date_Time_Created__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012G0000000qHQR</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Ready to Convert,Unqualified</value>
        </filters>
        <label>Business Services</label>
        <language>en_US</language>
        <sharedTo>
            <role>Outbound_Lead</role>
            <role>Outbound_Management</role>
            <role>Sales_Director</role>
            <role>Sales_Reporting_Analyst</role>
            <role>SalesforceSupport296281</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPAA_Lead_List_Allen_Stone</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>County__c</columns>
        <columns>License__c</columns>
        <columns>Date_of_Registration__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Date_of_Birth__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>CPAA</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Standard_Lead</value>
        </filters>
        <label>CPAA Lead List - Allen Stone</label>
        <language>en_US</language>
        <sharedTo>
            <group>Ryan_Moran</group>
            <role>Outbound_Lead</role>
            <role>Outbound_Management</role>
            <role>Sales_Director</role>
            <role>Sales_Reporting_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>House_Counsel_Leads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Date_Time_Created__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Product_Line_2__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Package_Interested_In__c</columns>
        <columns>Notify_Me_When_Documents_are_Modified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Source_Detail__c</field>
            <operation>equals</operation>
            <value>ADP,Internal</value>
        </filters>
        <label>House Counsel Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Outbound_Lead</role>
            <role>Outbound_Management</role>
            <role>Sales_Director</role>
            <role>Sales_Reporting_Analyst</role>
            <role>SalesforceSupport296281</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Has_LZ_Account__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>State_of_Formation__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified,Transaction Complete</value>
        </filters>
        <label>*My Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyLeadsCold</fullName>
        <columns>FULL_NAME</columns>
        <columns>Has_LZ_Account__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>State_of_Formation__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>NM - Attempt 2,NM - Attempt 3,VM - Final Attempt</value>
        </filters>
        <label>*My Leads -- Cold</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyLeadsHot</fullName>
        <columns>FULL_NAME</columns>
        <columns>Has_LZ_Account__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>State_of_Formation__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,VM - Attempt 1</value>
        </filters>
        <label>*My Leads - *Hot*</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyLeadsTM</fullName>
        <columns>FULL_NAME</columns>
        <columns>Has_LZ_Account__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>State_of_Formation__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Date_Time_Created__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>*My Leads - This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyLeadsTW</fullName>
        <columns>FULL_NAME</columns>
        <columns>Has_LZ_Account__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>State_of_Formation__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Date_Time_Created__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>*My Leads - This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyLeadsWarm</fullName>
        <columns>FULL_NAME</columns>
        <columns>Has_LZ_Account__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>State_of_Formation__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Response/Research Pending,Soft SNE,Hard SNE</value>
        </filters>
        <label>*My Leads - *Warm*</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyLeadstoday</fullName>
        <columns>FULL_NAME</columns>
        <columns>Has_LZ_Account__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>State_of_Formation__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Date_Time_Created__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>*My Leads - Today</label>
        <language>en_US</language>
    </listViews>
</CustomObject>